--- a/package.json
+++ b/package.json
@@ -8,15 +8,23 @@
   "license": "MIT",
   "scripts": {
     "watch": "tsc -W",
-    "dev": "nodemon dist/index.js"
+    "dev": "nodemon dist/start.js"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "helmet": "^7.1.0",
+    "qs": "^6.12.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/helmet": "^4.0.0",
     "@types/node": "^20.12.7",
+    "@types/qs": "^6.9.14",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
