--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
-    "qs": "^6.12.0"
+    "pino": "^8.20.0",
+    "pino-http": "^9.0.0",
+    "pino-http-print": "^3.1.0",
+    "pino-pretty": "^11.0.0",
+    "qs": "^6.12.0",
+    "rate-limiter-flexible": "^5.0.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.7",
