--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
+    "knex": "^3.1.0",
     "pino": "^8.20.0",
     "pino-http": "^9.0.0",
     "pino-http-print": "^3.1.0",
