--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
   "license": "MIT",
   "scripts": {
     "watch": "tsc -W",
-   "dev": "docker-compose -f docker-compose.yml build --build-arg NODE_ENV=development && docker-compose -f docker-compose.yml up -d && npm run all:logs",
-   "start": "docker build --target production -t phoenix-cms . && docker run -d -p ${PORT}:${PORT} phoenix-cms",
-   "all:logs": "docker-compose logs -f --tail 10"
+    "dev-test": "nodemon dist/start.js",
+    "dev": "docker-compose -f docker-compose.yml build --build-arg NODE_ENV=development && docker-compose -f docker-compose.yml up -d && npm run all:logs",
+    "start": "docker build --target production -t phoenix-cms . && docker run -d -p ${PORT}:${PORT} phoenix-cms",
+    "all:logs": "docker-compose logs -f --tail 10"
   },
   "dependencies": {
+    "celebrate": "^15.0.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.2.0",
     "helmet": "^7.1.0",
     "knex": "^3.1.0",
     "pino": "^8.20.0",
