--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "express-rate-limit": "^7.2.0",
     "helmet": "^7.1.0",
     "knex": "^3.1.0",
+    "pg": "^8.11.5",
     "pino": "^8.20.0",
     "pino-http": "^9.0.0",
     "pino-http-print": "^3.1.0",
     "pino-pretty": "^11.0.0",
     "qs": "^6.12.0",
-    "rate-limiter-flexible": "^5.0.0"
+    "rate-limiter-flexible": "^5.0.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.7",
